--- a/H1EmuLauncher/Language/StringResources.es-ES.xaml
+++ b/H1EmuLauncher/Language/StringResources.es-ES.xaml
@@ -164,4 +164,7 @@
     <system:String x:Key="item170">Contribuyentes Financieros</system:String>
     <system:String x:Key="item171">Versión del juego del 22 de diciembre de 2016, más actualizada y compatible con el proyecto.</system:String>
     <system:String x:Key="item172">Versión del juego del 15 de enero de 2015, no recibe tantas actualizaciones como en 2016 y es posible que carezca de funciones.</system:String>
+    <system:String x:Key="item173">Reportar un error...</system:String>
+    <system:String x:Key="item174">Aquí puede informar cualquier error que haya experimentado en el juego mientras usaba los archivos del servidor H1Emu:</system:String>
+    <system:String x:Key="item175">Aquí puede informar cualquier error que haya experimentado al usar H1Emu Launcher:</system:String>
 </ResourceDictionary>
