--- a/H1EmuLauncher/Windows/AboutPage.xaml
+++ b/H1EmuLauncher/Windows/AboutPage.xaml
@@ -145,7 +145,7 @@
                             FontSize="18"
                             FontWeight="Light">
 
-                            • Kentin •
+                            • Kentin • Meme •
 
                         </Paragraph>
 
@@ -168,7 +168,7 @@
                             FontSize="18"
                             FontWeight="Light">
 
-                            • Meme (2016 Server) • Avcio (2015 Server) • HaxMax (2015 server)
+                            • Avcio • HaxMax •
 
                         </Paragraph>
 
