--- a/H1EmuLauncher/Language/StringResources.ru-RU.xaml
+++ b/H1EmuLauncher/Language/StringResources.ru-RU.xaml
@@ -164,4 +164,7 @@
     <system:String x:Key="item170">Финансовые спонсоры</system:String>
     <system:String x:Key="item171">Версия игры от 22 декабря 2016 года, более актуальная и поддерживаемая проектом.</system:String>
     <system:String x:Key="item172">Версия игры от 15 января 2015 года, она не получает столько обновлений, как версия 2016 года, и в ней могут отсутствовать функции.</system:String>
+    <system:String x:Key="item173">Сообщить об ошибке...</system:String>
+    <system:String x:Key="item174">Здесь вы можете сообщить о любых ошибках, с которыми вы столкнулись в игре при использовании файлов сервера H1Emu:</system:String>
+    <system:String x:Key="item175">Здесь вы можете сообщить о любых ошибках, с которыми вы столкнулись при использовании H1Emu Launcher:</system:String>
 </ResourceDictionary>
