--- a/H1EmuLauncher/Windows/AboutPage.xaml
+++ b/H1EmuLauncher/Windows/AboutPage.xaml
@@ -306,7 +306,7 @@
                             FontSize="18"
                             FontWeight="Light">
 
-                            • Booze (Orphanfeast87) • Mahoaga • TimmyFPS • LegalViewbot • remapz
+                            • Booze (Orphanfeast87) • Mahoaga • TimmyFPS • LegalViewbot • remapz • Christer D
 
                         </Paragraph>
 
