--- a/H1EmuLauncher/Windows/AboutPage.xaml
+++ b/H1EmuLauncher/Windows/AboutPage.xaml
@@ -214,7 +214,7 @@
                             FontSize="18"
                             FontWeight="Light">
 
-                            • Eavilaswayce • Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest  • 69_HaxMax • GinnessForever • Chriis • Flo •
+                            • Eavilaswayce • Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest  • 69_HaxMax • GinnessForever • Chriis • Flo • 余科辰 •
 
                         </Paragraph>
 
