--- a/H1EmuLauncher/Windows/Settings.xaml
+++ b/H1EmuLauncher/Windows/Settings.xaml
@@ -8,12 +8,13 @@
         Title="H1Emu Launcher Settings"
         x:Name="MainSettings"
         Width="740"
-        Height="530"
+        Height="auto"
         WindowStartupLocation="CenterOwner"
         Background="#FF2A2A32"
         FontFamily="Bahnschrift Light"
         FontSize="16"
         ResizeMode="NoResize"
+        SizeToContent="WidthAndHeight"
         Loaded="SettingsLoaded"
         Closing="MainSettingsClosing"
         Activated="MainSettingsActivated"
@@ -48,7 +49,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="5*"/>
-                <RowDefinition Height="35"/>
+                <RowDefinition Height="40"/>
             </Grid.RowDefinitions>
 
             <!-- Grid for logo and exit button -->
@@ -62,7 +63,7 @@
                 </Grid.ColumnDefinitions>
                 
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="90"/>
                 </Grid.RowDefinitions>
 
                 <!-- Logo -->
@@ -116,9 +117,9 @@
                 </Grid.Effect>
 
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="2*"/>
-                    <RowDefinition Height="100"/>
+                    <RowDefinition Height="108"/>
+                    <RowDefinition Height="270"/>
+                    <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
 
                 <Grid>
@@ -197,14 +198,21 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
+                        <RowDefinition Height="20"/>
                     </Grid.RowDefinitions>
-                    
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
                     <!-- Install patch button -->
                     <Button x:Name="patchButton"
                             Click="InstallPatch"
                             Width="220"
                             Height="40"
-                            Margin="20,20,0,0"
+                            Margin="20"
+                            VerticalAlignment="Center"
                             HorizontalAlignment="Left"
                             Foreground="White"
                             FontFamily="Arial Black"
@@ -212,29 +220,30 @@
                             BorderThickness="0"
                             Content="{DynamicResource item42}"
                             Style="{DynamicResource StandardButton}">
-                        
+
                         <Button.Background>
                             <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
                         </Button.Background>
                     </Button>
-                    
+
                     <!-- Patch button text -->
-                    <TextBlock
-                        Width="400"
-                        Margin="260,20,20,0"
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Center"
-                        Foreground="White"
-                        TextWrapping="Wrap"
-                        Text="{DynamicResource item45}"/>
-                    
+                    <TextBlock Grid.Column="1"
+                               Width="400"
+                               Margin="20"
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Center"
+                               Foreground="White"
+                               TextWrapping="Wrap"
+                               Text="{DynamicResource item45}"/>
+
                     <!-- Install latest server button -->
                     <Button x:Name="latestButton"
                             Grid.Row="1"
                             Click="InstallServer"
                             Width="220"
                             Height="40"
-                            Margin="20,15,0,0"
+                            Margin="20"
+                            VerticalAlignment="Center"
                             HorizontalAlignment="Left"
                             Foreground="White"
                             FontFamily="Arial Black"
@@ -242,30 +251,31 @@
                             BorderThickness="0"
                             Content="{DynamicResource item43}"
                             Style="{DynamicResource StandardButton}">
-                        
+
                         <Button.Background>
                             <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
                         </Button.Background>
                     </Button>
-                    
+
                     <!-- Latest server button text -->
-                    <TextBlock
-                        Grid.Row="1"
-                        Width="400"
-                        Margin="260,15,20,0"
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Center"
-                        Foreground="White"
-                        TextWrapping="Wrap"
-                        Text="{DynamicResource item46}"/>
-                    
+                    <TextBlock Grid.Row="1"
+                               Grid.Column="1"
+                               Width="400"
+                               Margin="20"
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Center"
+                               Foreground="White"
+                               TextWrapping="Wrap"
+                               Text="{DynamicResource item46}"/>
+
                     <!-- Install stable server button -->
                     <Button x:Name="stableButton"
                             Grid.Row="2"
                             Click="InstallServer"
                             Width="220"
                             Height="40"
-                            Margin="20,10,0,0"
+                            Margin="20"
+                            VerticalAlignment="Center"
                             HorizontalAlignment="Left"
                             Foreground="White"
                             FontFamily="Arial Black"
@@ -273,46 +283,51 @@
                             BorderThickness="0"
                             Content="{DynamicResource item44}"
                             Style="{DynamicResource StandardButton}">
-                        
+
                         <Button.Background>
                             <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
                         </Button.Background>
                     </Button>
-                    
+
                     <!-- Stable server button text -->
-                    <TextBlock
-                        Grid.Row="2"
-                        Width="400"
-                        Margin="260,10,20,0"
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Center"
-                        Foreground="White"
-                        TextWrapping="Wrap"
-                        Text="{DynamicResource item47}"/>
+                    <TextBlock Grid.Row="2"
+                               Grid.Column="1"
+                               Width="400"
+                               Margin="20"
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Center"
+                               Foreground="White"
+                               TextWrapping="Wrap"
+                               Text="{DynamicResource item47}"/>
                 </Grid>
 
-                <!-- Status progress bar -->
-                <ProgressBar x:Name="settingsProgress"
-                             Grid.Row="2"
-                             Height="35"
-                             Margin="20,0,20,0"
-                             Style="{DynamicResource ProgressBar}"/>
-                
-                <!-- Progress bar outline (usually the fill colour overlaps the outline of the progress bar) -->
-                <ProgressBar
-                    Grid.Row="2"
-                    Height="35"
-                    Margin="20,0,20,0"
-                    Background="Transparent"
-                    Style="{DynamicResource ProgressBar}"/>
-                
-                <!-- Status text to overlay progress bar -->
-                <TextBlock x:Name="settingsProgressText"
+                <!-- Grid for settings progress bar -->
+                <Grid x:Name="settingsProgressRow"
+                      Grid.Row="2"
+                      Visibility="Collapsed">
+                    
+                    <!-- Status progress bar -->
+                    <ProgressBar x:Name="settingsProgress"
+                                 Grid.Row="2"
+                                 Height="35"
+                                 Margin="20,0,20,30"
+                                 Style="{DynamicResource ProgressBar}"/>
+
+                    <!-- Progress bar outline (usually the fill colour overlaps the outline of the progress bar) -->
+                    <ProgressBar Grid.Row="2"
+                                 Height="35"
+                                 Margin="20,0,20,30"
+                                 Background="Transparent"
+                                 Style="{DynamicResource ProgressBar}"/>
+
+                    <!-- Status text to overlay progress bar -->
+                    <TextBlock x:Name="settingsProgressText"
                            Grid.Row="2"
-                           VerticalAlignment="Center"
                            HorizontalAlignment="Center"
+                           Margin="0,8,0,0"
                            Foreground="White"
                            Background="Transparent"/>
+                </Grid>
             </Grid>
 
             <!-- Hyperlink to open account key window -->
