--- a/H1EmuLauncher/Windows/Launcher.xaml
+++ b/H1EmuLauncher/Windows/Launcher.xaml
@@ -183,7 +183,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="25*"/>
                 <RowDefinition Height="116*"/>
-                <RowDefinition Height="8*"/>
+                <RowDefinition Height="40"/>
             </Grid.RowDefinitions>
 
             <!-- Grid for logo and exit button & other -->
